cmake_minimum_required(VERSION 3.31)
project(AtCoder)

set(CMAKE_CXX_STANDARD 20)

add_executable(AtCoder
        # AtCoder_Beginner_Contest_442/A_count.cpp
        # AtCoder_Beginner_Contest_442/B_Music_Player.cpp
        # AtCoder_Beginner_Contest_442/C_Peer_Review.cpp
        AtCoder_Beginner_Contest_442/D_Swap_and_Range_Sum.cpp
)
