cmake_minimum_required(VERSION 3.31)
project(AtCoder)

set(CMAKE_CXX_STANDARD 20)

add_executable(AtCoder
        Atcoder_Algorithms_Math/008_Brute_Force_1.cpp
        # AtCoder_Beginner_Contest_442/A_count.cpp
        # AtCoder_Beginner_Contest_442/B_Music_Player.cpp
        # AtCoder_Beginner_Contest_442/C_Peer_Review.cpp
        # AtCoder_Beginner_Contest_442/D_Swap_and_Range_Sum.cpp
        # AtCoder_Programming_Guide_for_beginners/1_Hajimeni/Hello_cpp.cpp
        # Atcoder_Algorithms_Math/007_Number_of_Multiples_1.cpp

)
